--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Merienda', cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.mynav{
+    background: linear-gradient(90deg, rgb(168, 90, 175) 0%, rgba(72,65,253,1) 100%);
+    margin: auto;
+    padding: 2%;
+    justify-content:end;
+    color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.mynav ul {
+    list-style: none;
+    display: flex;
+    text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.mynav li{
+    padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.milink{
+    color: white;
+    font-style: none;
+}
+.boton{
+    justify-content: center;
+    text-align: center;
+    margin: 2%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bg-navdisp{
+    justify-content:end;
 }
